some work completed on flexbox, some messaging changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset = "UTF-8">
         <title>Jack Fretwell</title>
-        <link href = "styles.css">
+        <link rel = "stylesheet" href = "styles.css">
     </head>
     <body>
         <script src = "index.js"></script>
@@ -14,8 +14,11 @@
         </header>
         <div class = "content-wrapper">
             <section class = "hero">
-                <h1>welcome!</h1>
-                <p>I'm Jack Fretwell, a second year Computer Science student at the University of Liverpool.</p>
+                <div class = "top-line">
+                    <h1>welcome! I'm Jack Fretwell</h1>
+                    <img src = "images/fretworks_face.png" width = 120 height = auto>
+                </div>
+                <p>I'm a second year Computer Science student at the University of Liverpool.</p>
                 <p>I enjoy working on side projects, so this is a place where I can show what I've been up to.</p>
                 <p>I'm particularly intersted in full stack development, but also love cybersecurity and data structures.</p>
                 <p>You can get in touch via _ or any of my social media accounts. </p>
