--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <body>
         <script src = "index.js"></script>
         <header>
+            <div class = "logo">
+               <img src = "images/logo.png" width = 200 height = auto> 
+            </div>
             <a href = "/" class = "hdr1">Home</a>
             <a href = "#" class = "hdr2">Blog</a>
             <a href = "#" class = "hdr3">Projects</a>
@@ -25,9 +28,9 @@
             </section>
         </div>
         <div class = "sidebar-left">
-            <a href = "https://github.com/JackFretwell">github</a>
-            <a href = "https://www.linkedin.com/in/jackfretwell/">linkedIn</a>
-            <a href = "https://www.youtube.com">YouTube</a>
+            <a href = "https://github.com/JackFretwell"><img src = "images/github.png"></a>
+            <a href = "https://www.linkedin.com/in/jackfretwell/"><img src = "images/linkedin.png"></a>
+            <a href = "https://www.youtube.com"><img src = "images/youtube.png"></a>
         </div>
     </body>
 </html>
