--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
             <div class = "logo">
                <img src = "images/logo.png" width = 200 height = auto> 
             </div>
-            <a href = "/" class = "hdr1">Home</a>
-            <a href = "#" class = "hdr2">Blog</a>
-            <a href = "#" class = "hdr3">Projects</a>
+            <div class = "header-links">
+                <a href = "/" class = "hdr1">Home</a>
+                <a href = "#" class = "hdr2">Projects</a>
+                <a href = "#" class = "hdr3">Blog</a>
+            </div>
         </header>
         <div class = "content-wrapper">
             <section class = "hero">
