technical skills section added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,34 @@
                 <p>I'm particularly intersted in full stack development, but also love cybersecurity and data structures.</p>
                 <p>You can get in touch via _ or any of my social media accounts. </p>
             </section>
+
+        <section class = "technical-info">
+            <h1>technical skills</h1>
+            <section class = "skills">
+            <div class = "languages">
+                <h3>languages</h3>
+                <p>Java</p>
+                <p>Haskell</p>
+                <p>Javascript</p>
+                <p>Swift</p>
+            </div>
+            <div class = "web-development">
+                <h3>web development</h3>
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>Node.js</p>
+            </div>
+            <div class = "databases">
+                <h3>databases</h3>
+                <p>MySQL</p>
+            </div>
+            <div class = "frameworks">
+                <h3>frameworks</h3>
+                <p>Git</p>
+                <p>GitHub</p>
+            </div>
+            </section>
+        </section>
         </div>
         <div class = "sidebar-left">
             <a href = "https://github.com/JackFretwell"><img src = "images/github.png"></a>
