format technical skills, add header background color

--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
             <section class = "skills">
             <div class = "languages">
                 <h3>languages</h3>
-                <p>Java</p>
-                <p>Haskell</p>
-                <p>Javascript</p>
-                <p>Swift</p>
+                <p>• Java</p>
+                <p>• Haskell</p>
+                <p style = "font-style: italic;">• Javascript (learning)</p>
+                <p style = "font-style: italic;">• Swift (learning)</p>
             </div>
             <div class = "web-development">
                 <h3>web development</h3>
-                <p>HTML</p>
-                <p>CSS</p>
-                <p>Node.js</p>
+                <p>• HTML</p>
+                <p>• CSS</p>
+                <p style = "font-style: italic;">• Node.js (learning)</p>
             </div>
             <div class = "databases">
                 <h3>databases</h3>
-                <p>MySQL</p>
+                <p>• MySQL</p>
             </div>
             <div class = "frameworks">
                 <h3>frameworks</h3>
-                <p>Git</p>
-                <p>GitHub</p>
+                <p>• Git</p>
+                <p>• GitHub</p>
             </div>
             </section>
         </section>
