remove icon backgrounds, updated domain email

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                <img src = "images/logo.png" width = 200 height = auto> 
             </div>
             <div class = "header-links">
-                <a href = "/" class = "hdr1">Home</a>
-                <a href = "#" class = "hdr2">Projects</a>
-                <a href = "#" class = "hdr3">Blog</a>
+                <a href = "/" class = "hdr1">home</a>
+                <a href = "#" class = "hdr2">projects</a>
+                <a href = "#" class = "hdr3">blog</a>
             </div>
         </header>
         <div class = "content-wrapper">
@@ -24,9 +24,9 @@
                     <img src = "images/fretworks_face.png" width = 120 height = auto>
                 </div>
                 <p>I'm a second year Computer Science student at the University of Liverpool.</p>
-                <p>I enjoy working on side projects, so this is a place where I can show what I've been up to.</p>
-                <p>I'm particularly intersted in full stack development, but also love cybersecurity and data structures.</p>
-                <p>You can get in touch via _ or any of my social media accounts. </p>
+                <p>I enjoy working on side projects, so this is a place where I can show what I've been up to!</p>
+                <p>I'm particularly intersted in full stack development, but also have a love for cybersecurity and data structures & algorithms.</p>
+                <p>You can get in touch via jack@jackfretwell.com or any of my social media accounts. </p>
             </section>
 
         <section class = "technical-info">
