create project page, add basic elements

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
             <div class = "header-links">
                 <a href = "/" class = "hdr1">home</a>
-                <a href = "#" class = "hdr2">projects</a>
+                <a href = "projects.html" class = "hdr2">projects</a>
                 <a href = "#" class = "hdr3">blog</a>
             </div>
         </header>
