format correct on projects page

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
                <img src = "images/logo.png" width = 200 height = auto> 
             </div>
             <div class = "header-links">
-                <a href = "/" class = "hdr1">home</a>
-                <a href = "projects.html" class = "hdr2">projects</a>
-                <a href = "#" class = "hdr3">blog</a>
+                <a href = "/" class = "hdr1">Home</a>
+                <a href = "projects.html" class = "hdr2">Projects</a>
+                <a href = "#" class = "hdr3">Blog</a>
             </div>
         </header>
         <div class = "content-wrapper">
             <section class = "hero">
                 <div class = "top-line">
-                    <h1>welcome! I'm Jack Fretwell</h1>
+                    <h1>Welcome! I'm Jack Fretwell</h1>
                     <img src = "images/fretworks_face.png" width = 110 height = 125>
                 </div>
                 <p>I'm a second year Computer Science student at the University of Liverpool.</p>
@@ -30,27 +30,27 @@
             </section>
 
         <section class = "technical-info">
-            <h1>technical skills</h1>
+            <h1>Technical Skills</h1>
             <section class = "skills">
             <div class = "languages">
-                <h3>languages</h3>
+                <h3>Languages</h3>
                 <p>• Java</p>
                 <p>• Haskell</p>
                 <p style = "font-style: italic;">• Javascript (learning)</p>
                 <p style = "font-style: italic;">• Swift (learning)</p>
             </div>
             <div class = "web-development">
-                <h3>web development</h3>
+                <h3>Web Development</h3>
                 <p>• HTML</p>
                 <p>• CSS</p>
                 <p style = "font-style: italic;">• Node.js (learning)</p>
             </div>
             <div class = "databases">
-                <h3>databases</h3>
+                <h3>Databases</h3>
                 <p>• MySQL</p>
             </div>
             <div class = "frameworks">
-                <h3>frameworks</h3>
+                <h3>Frameworks</h3>
                 <p>• Git</p>
                 <p>• GitHub</p>
             </div>
