phonetic-alphabet project page created

--- a/projects.html
+++ b/projects.html
@@ -12,20 +12,24 @@
                <img src = "images/logo.png" width = 200 height = auto> 
             </div>
             <div class = "header-links">
-                <a href = "index.html" class = "hdr1">home</a>
-                <a href = "projects.html" class = "hdr2">projects</a>
-                <a href = "#" class = "hdr3">blog</a>
+                <a href = "index.html" class = "hdr1">Home</a>
+                <a href = "projects.html" class = "hdr2">Projects</a>
+                <a href = "#" class = "hdr3">Blog</a>
             </div>
         </header>
-        <div class = "project-section">
-            <h1>what I've been working on</h1>
-            <div class = "projects-content-wrapper">
-                <div class = "phonetic-alph-project">
-                    <img src = "images/phonetic-alph-project.png" width = 400 height = auto>
-                    <p style = "font-size: x-large; font-style: italic;">phonetic alphabet trainer</p>
-                    <p style = "font-size: large;">made using java and java.swing tools, this program helps to teach users the phonetic alphabet. click for more information and a walk-through video.</p>
+        <div class = "cont-wrapper">
+            <div class = "project-section">
+                <h1>What I've been working on...</h1>
+                <a href = "project_pages/phonetic-alphabet-trainer-page.html">
+                <div class = "projects-box">
+                    <div class = "phonetic-alph-project">
+                        <img src = "images/phonetic-alph-project.png" width = 400 height = auto>
+                        <p style = "font-size: x-large; font-style: italic;">Phonetic Alphabet Trainer</p>
+                        <p style = "font-size: large;">Made using java and java.swing tools, this program helps to teach users the phonetic alphabet. Click for more information and a walk-through video.</p>
+                    </div>
                 </div>
-             </div>
+            </a>
+            </div>
         </div>
          <div class = "sidebar-left">
             <a href = "https://github.com/JackFretwell"><img src = "images/github.png"></a>
