phonetic alphabet page set up, change to color scheme

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class = "sidebar-left">
             <a href = "https://github.com/JackFretwell"><img src = "images/github.png"></a>
             <a href = "https://www.linkedin.com/in/jackfretwell/"><img src = "images/linkedin.png"></a>
-            <a href = "https://www.youtube.com"><img src = "images/youtube.png"></a>
+            <a href = "https:www.youtube.com/@fret_works"><img src = "images/youtube.png"></a>
         </div>
     </body>
 </html>
