--- a/project_pages/phonetic-alphabet-trainer-page.html
+++ b/project_pages/phonetic-alphabet-trainer-page.html
@@ -17,11 +17,30 @@
                 <a href = "#" class = "hdr3">Blog</a>
             </div>
         </header>
-       
+<div class = "test">
+        <div class = "info-wrapper">
+
+            <div class = "information">
+                <h1>Phonetic Alphabet Trainer</h1>
+                <p>In my previous job I often had to communicate over the phone, and would dread the inevitable moments where I'd need to spell something out, ending up saying something along the lines of "erm, 'G' for... Gary?".</p>
+                <p>So I made this little program! Now I'm an expert (I still say 'G for Gary' but it's a purposeful decision).</p>
+                <p>A letter flashes on the screen, and the user is asked to enter the corresponding word from the phonetic alphabet. If their answer is correct, it'll let them know by showing a 'Correct!' screen with a green background, waiting a moment, and then moving on to the next letter.</p>
+                <p>If the answer was incorrect, a red screen will flash, with the message "Incorrect!. A moment will pass, and then the correct answer will be shown on the screen. A new letter will take it's place and the training can continue.</p>
+                <p>I learnt a great deal from this project, especially in relation to Java.swing.</p>
+                <p>If you haven't already, please check out the short YouTube video below! It gives a quick walk-through of the program.</p>
+            </div>
+            <div class = "video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/IF-aA2YbkG4" 
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+                </iframe>
+            </div>
+        </div>
+    </div>
          <div class = "sidebar-left">
             <a href = "https://github.com/JackFretwell"><img src = "../images/github.png"></a>
             <a href = "https://www.linkedin.com/in/jackfretwell/"><img src = "../images/linkedin.png"></a>
-            <a href = "https://www.youtube.com"><img src = "../images/youtube.png"></a>
+            <a href = "https:www.youtube.com/@fret_works"><img src = "../images/youtube.png"></a>
         </div>
     </body>
 </html>
