--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
         <div class = "cont-wrapper">
             <div class = "project-section">
                 <h1>What I've been working on...</h1>
-                <a href = "project_pages/phonetic-alphabet-trainer-page.html">
+                <a href = "project_pages/phonetic-alphabet-trainer-page.html" class = "link-box">
                 <div class = "projects-box">
                     <div class = "phonetic-alph-project">
                         <img src = "images/phonetic-alph-project.png" width = 400 height = auto>
@@ -34,7 +34,7 @@
          <div class = "sidebar-left">
             <a href = "https://github.com/JackFretwell"><img src = "images/github.png"></a>
             <a href = "https://www.linkedin.com/in/jackfretwell/"><img src = "images/linkedin.png"></a>
-            <a href = "https://www.youtube.com"><img src = "images/youtube.png"></a>
+            <a href = "https:www.youtube.com/@fret_works"><img src = "images/youtube.png"></a>
         </div>
     </body>
 </html>
