--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section class = "hero">
                 <div class = "top-line">
                     <h1>Welcome! I'm Jack Fretwell</h1>
-                    <img src = "images/fretworks_face.png" width = 110 height = 125>
+                    <img src = "images/fretworks_face.png" width = 200 height = auto>
                 </div>
                 <p>I'm a second year Computer Science student at the University of Liverpool.</p>
                 <p>I enjoy working on side projects, so this is a place where I can show you what I've been up to!</p>
