--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,10 @@
         </header>
         <div class = "cont-wrapper">
             <div class = "project-section">
-                <h1>What I've been working on...</h1>
+                <div class = "top-line-2">
+                    <h1>What I've been working on...</h1>
+                    <img src = "images/fretworks_face2.png" width = 280 height = auto>
+                </div>
                 <a href = "project_pages/phonetic-alphabet-trainer-page.html" class = "link-box">
                 <div class = "projects-box">
                     <div class = "phonetic-alph-project">
